org.ekstep.questionunit-1.1/renderer/components/css/components.css
body {
    font-family: NotoSans, NotoSansOriya, NotoSansGujarati, NotoSansMalayalam;
    line-height: 19px;
}

/* overiding katex css */
.math-text .katex-display {
    margin: 0.2em 0 !important;
}

/*end */

/* From here image model popup style */

.qc-popup-close-button {
    cursor: pointer;
    position: absolute;
    right: -35px;
    color: white;
    bottom: 87%;
}

#image-model-popup {
    z-index: 100001;
    /* Z index 100001 to hide the menu and refresh icon which has 100000 */
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
}

#image-model-popup .popup-overlay {
    opacity: 0.8;
}

#image-model-popup .popup-full-body {
    width: auto;
    margin: auto;
}

#image-model-popup .assess-popup {
    position: relative;
    width: fit-content;
    top: 0;
    left: 0;
    margin: auto;
}

#image-model-popup img.qc-question-fullimage {
    max-width: 60vw;
    max-height: 100%;
}

#image-model-popup .qc-popup-close-button {
    position: absolute;
    right: -15px;
    top: -20px;
    color: white;
    font-size: 20px;
}

/* question component css */

.absolute-center {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    justify-content: center;
    display: flex;
    align-items: center;
}

.question-container .image-container img.audio,
.question-container .image-container img.q-image {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    margin: auto;
}

.question-container {
    padding: 1% 0%;
    height: 100%;
    background-color: #FFFFFF;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
    position: relative;
    z-index: 3;
}

.question-container .image-container {
    width: 14%;
    float: left;
    top: 0;
    position: absolute;
    z-index: 2;
    height: 100%;
    margin-left: 9%;
}

.question-container .image-container img.q-image {
    max-width: 100%;
    max-height: 100%;
    float: left;
    right: 0;
    cursor: pointer;
}

.question-container .image-container img.audio {
    width: 30%;
    float: left;
    right: -13%;
    cursor: pointer;
}

.question-container .image-container img.audio.no-q-image {
    width: 50%;
    float: left;
    right: 18%;
}

.question-container .hiding-container {
    width: 100%;
    height: 90%;
    padding: 0% 14.0625%;
    overflow: hidden;
    background: white;
    position: absolute;
    z-index: 1;
}

.question-container .hiding-container .expand-container {
    max-height: 70vh;
    width: 100%;
    overflow: scroll;
    overflow-x: hidden;
}

.question-container .hiding-container .expand-container::-webkit-scrollbar {
    width: 0px;
    /* remove scrollbar space */
    background: transparent;
    /* optional: just make scrollbar invisible */
}

/* optional: show position indicator in red */

.question-container .hiding-container .expand-container::-webkit-scrollbar-thumb {
    background: #FF0000;
}

.question-container .hiding-container .expand-container.with-media {
    padding-left: 18%;
}

.question-container .hiding-container .expand-container p {
    margin-top: 0;
}

.question-container .expand-button {
    position: absolute;
    background-color: #E3E3E3;
    width: 9%;
    border-radius: 9px;
    height: 21.8%;
    bottom: 5%;
    right: 2%;
    z-index: 2;
    cursor: pointer;
    display: none;
}

.question-container .expand-button img {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    height: 70%;
}

.question-container .expand-button img.flip {
    transform: rotate(180deg);
}

.bg-graphics {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

.bg-graphics .bg-circle {
    position: fixed;
    width: 60vw;
    height: 106.6662vh;
    border-radius: 50%;
    opacity: 0.15;
    background-color: #ffffff;
}

.bg-graphics .bg-circle.circle-left {
    left: -20vw;
    top: 0vh;
}

.bg-graphics .bg-circle.circle-right {
    right: -20vw;
    top: 30vh;
}

.plugin-content-container em {
    font-style: italic;
}

.urdu-text{
    font-family: NotoNastaliqUrdu;
    font-size: 12px;
    padding: 3px;
    line-height: 1.95em
}

